<resources>
    <string name="app_name">FindMeASeat</string>
    <string name="title_home">Home</string>
    <string name="title_user_profile">Profil</string>
    <string name="title_all_bookings">Buchungen</string>
    <string name="filterUniversity">Filter</string>
    <string name="log_in">Log In</string>
    <string name="username">Benutzername</string>
    <string name="welcome_to_the_app">Willkommen!</string>
    <string name="passwort">Passwort</string>
    <string name="title_buildings">Gebäude</string>
    <string name="current_bookings">Aktuelle Buchungen</string>
    <string name="matriculation_number_label">Matrikelnummer</string>
    <string name="first_name_label">Vorname</string>
    <string name="last_name_label">Nachname</string>
    <string name="email_address_label">E-Mail Adresse</string>
    <string name="log_out">Log Out</string>
    <string name="favorite_button_description">Favorite Button</string>
    <string name="seats_label">Sitzplätze</string>
    <string name="legend_label">Legende</string>
    <string name="legend_item_free">Frei</string>
    <string name="legend_item_selected">Auswahl</string>
    <string name="legend_item_occupied">Besetzt</string>
    <string name="selected_seat_label">Keine Auswahl</string>
    <string name="selected_date_label">Kein Datum</string>
    <string name="booking_button_text">Buchen</string>
    <string name="cancel_booking_button_label">Stornieren</string>
    <string name="time_placeholder">Uhrzeit</string>
    <string name="seats_placeholder">Plätze:</string>
    <string name="quick_booking_button_text">Schnellbuchung</string>
    <string name="areas_label">Bereiche</string>
    <string name="from_label">Von:</string>
    <string name="to_label">Bis:</string>
    <string name="time_label">Uhrzeit</string>
    <string name="date_hint">Datum</string>
    <string name="favorite_buildings_label">Gemerkte Gebäude</string>
    <string name="no_bookings_text">Keine Buchungen vorhanden</string>
    <string name="cancel_booking">Buchung stornieren</string>
    <string name="stop_booking">Buchung beenden</string>
    <string name="no_favorite_buildings_text">Keine gemerkten Gebäude vorhanden</string>
    <string name="no_recent_bookings_text">Keine aktuellen Buchungen vorhanden</string>
</resources>
