<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="at.ac.univie.hci.findmeaseat.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_buildings"
        android:name="at.ac.univie.hci.findmeaseat.ui.building.BuildingFragment"
        android:label="@string/title_buildings"
        tools:layout="@layout/fragment_building" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="at.ac.univie.hci.findmeaseat.ui.profile.UserProfileFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/navigation_all_bookings"
        android:name="at.ac.univie.hci.findmeaseat.ui.bookings.AllBookingsFragment"
        android:label="@string/title_all_bookings"
        tools:layout="@layout/fragment_all_bookings" />
</navigation>
