<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.buildings.AreaDetailsActivity">

    <TextView
        android:id="@+id/seatsTitleView"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/seats_label"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/seatsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seatsTitleView" />

    <TextView
        android:id="@+id/legend_title_text_view"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seatsRecyclerView"
        android:layout_height="wrap_content"
        android:text="@string/legend_label"/>

    <LinearLayout
        android:id="@+id/legend_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/legend_title_text_view">

        <TextView
            android:id="@+id/legend_free_text_view"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/legend_item_free"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal|center_vertical"
            android:background="@color/freeSeat"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="8dp"
            android:layout_margin="8dp"
            />

        <TextView
            android:id="@+id/legend_selected_text_view"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/legend_item_selected"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/legend_occupied_text_view"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/legend_item_occupied"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/design_default_color_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="8dp"
            android:layout_margin="8dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/selected_seat_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/selected_seat_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/legend_layout" />

    <TextView
        android:id="@+id/seat_booking_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/selected_date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_seat_text_view" />

    <Button
        android:id="@+id/booking_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="bookSelectedSeat"
        android:text="@string/booking_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seat_booking_period" />

</androidx.constraintlayout.widget.ConstraintLayout>